@@ -24,12 +24,15 @@ dependencies {
     implementation 'com.ibm.icu:icu4j:76.1'
     implementation 'com.alibaba.fastjson2:fastjson2:2.0.54'
     implementation 'org.snakeyaml:snakeyaml-engine:2.9'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.4'
 }
 
 testing {
     suites {
         test {
-            useJUnitJupiter('5.9.2')
+            useJUnit()
         }
     }
 }
@@ -37,6 +40,16 @@ testing {
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs << '-Xlint:-options'
     options.compilerArgs << '-Xlint:deprecation'
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += '--enable-native-access=ALL-UNNAMED'
+}
+
+allprojects {
+    tasks.withType(JavaExec).configureEach {
+        jvmArgs += '--enable-native-access=ALL-UNNAMED'
+    }
 }
 
 shadowJar {
